--- a/metadata/templates/metadata/base.html
+++ b/metadata/templates/metadata/base.html
@@ -52,7 +52,7 @@
               <li class="active"><a href="/">Home</a></li>
          
               <li><a href="{% url 'list' %}">Metadata</a></li>
-              <li><a href="{% url 'admin:index' %}metadata">Administration (Metadata)</a></li>
+              <li><a href="{% url 'admin:index' %}metadata">Administration</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
