--- a/metadata/templates/metadata/metadata_list.html
+++ b/metadata/templates/metadata/metadata_list.html
@@ -38,8 +38,8 @@
 
    </br>
    </br>
-    <div class="pagination pagination-medium">
-  <ul>
+    <div>
+  <ul class="pagination">
     {% if page_obj.has_previous %}
      <li><a href="?page={{ page_obj.previous_page_number }}">Prev</a></li>
       {% else %}
@@ -65,6 +65,7 @@
 
 
   </ul>
+
 </div>
 
     <ul>
@@ -75,7 +76,7 @@
     </ul>
 
     <div class="pagination pagination-medium">
-  <ul>
+  <ul class="pagination">
     {% if page_obj.has_previous %}
      <li><a href="?page={{ page_obj.previous_page_number }}">Prev</a></li>
       {% else %}
